--- a/src/main/resources/templates/compra/form.html
+++ b/src/main/resources/templates/compra/form.html
@@ -12,7 +12,7 @@
         	<h2>Cadastro de Compra</h2>
         	
         	<div class="row">
-        		<form id="frm" th:action="@{/fornecedor}" method="post" 
+        		<form id="frm" th:action="@{/compra}" method="post" 
         			th:object="${fornecedor}"
         			onsubmit="return salvar('/fornecedor');">
         			<div class="row">
